plang/testing/logs/false-incorrect/23/program23.p.p
t7ziB dj :- cif (V7C) (jpmg); (vtgw n OY8ZI); (j yac4W ZlvmQ (Dpyj5) xD); bBEn (G) gk7 (eqW (oHUU UpCs) (JCC) (WnHT)).
wfSH (IdJ).


vmO (YLAJK) bC tqH (Mj) :- k (spL) TO0g p9i (zRw94 f6g (bve (s C RVA KUGt (Xn))) t).

dvNb6 :- (sn (NvwYC)).
noq JN8 PgYs.

pwn (aq28 DzmwO igsdU).

i :- (rac Ll L4AeO UI, vhed (LSL2z) (JAmM3); (qT yYHf (exwRk ILp (pN V a9 eLwO))), xeju Du (gK) (rwvR (V7eT4) krMR W)), (eM5Hz, (c), i (Xyj3) IvsZ szE; y (d (nBJ) (cd nufbY fUAr) (hF) y); (ds7W7 z1F (eMYr (Xh) (Ym)) p8dM)).

wddI ctul (yAw oQZ P (w4)) (GaZSh).
pUKR (B) (ur ec3w).


eWcqu.
j Oce3 OY8P.

n0u (Hhkvj) (SN).


ap3 PbV.
jqv k.


vliw.


? (eq (a8PY (upjm4 (BRB)) Hxyz3 aofA vXrQx) (o) (ItNH) (EFHNa), pgE I (A) TM, (yn7); xMMu (IeOMU) (rJ) en (TOG); xCiP, grN (fZu m7FG yv (x (n) (QEUH) (f swQXq (U) (j0z xd e3sfg) P60u)) (LIh)) (Ykzu) (n7 wMyWd) (y0xYp (m G Oc5Sp (KBf)) obau0), (f3pJc (HmQC) (sN ZZ2v))).
